crates/ty_python_semantic/resources/mdtest/snapshots/paramspec.md_-_Legacy_`ParamSpec`_-_Validating_`ParamSpe…_(648be2a43987ffd8).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: paramspec.md - Legacy `ParamSpec` - Validating `ParamSpec` usage
mdtest path: crates/ty_python_semantic/resources/mdtest/generics/legacy/paramspec.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import Any, Final, ParamSpec, Callable, Concatenate, Protocol, Generic
 2 | 
 3 | P = ParamSpec("P")
 4 | 
 5 | class ValidProtocol(Protocol[P]):
 6 |     def method(self, c: Callable[P, int]) -> None: ...
 7 | 
 8 | class ValidGeneric(Generic[P]):
 9 |     def method(self, c: Callable[P, int]) -> None: ...
10 | 
11 | def valid(
12 |     a1: Callable[P, int],
13 |     a2: Callable[Concatenate[int, P], int],
14 | ) -> None: ...
15 | def invalid(
16 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
17 |     a1: P,
18 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
19 |     a2: list[P],
20 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
21 |     a3: Callable[[P], int],
22 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
23 |     a4: Callable[..., P],
24 |     # TODO: error
25 |     a5: Callable[Concatenate[P, ...], int],
26 | ) -> None: ...
27 | 
28 | # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
29 | def invalid_return() -> P:
30 |     raise NotImplementedError
31 | 
32 | def invalid_variable_annotation(y: Any) -> None:
33 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
34 |     x: P = y
35 | 
36 | def invalid_with_qualifier(y: Any) -> None:
37 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
38 |     x: Final[P] = y
39 | 
40 | # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
41 | def invalid_stringified_return() -> "P":
42 |     raise NotImplementedError
43 | 
44 | def invalid_stringified_annotation(
45 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
46 |     a: "P",
47 | ) -> None: ...
48 | def invalid_stringified_variable_annotation(y: Any) -> None:
49 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
50 |     x: "P" = y
```

# Diagnostics

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:17:9
   |
15 | def invalid(
16 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
17 |     a1: P,
   |         ^
18 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
19 |     a2: list[P],
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - or as part of a type parameter/argument list
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:19:14
   |
17 |     a1: P,
18 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
19 |     a2: list[P],
   |              ^
20 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
21 |     a3: Callable[[P], int],
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - or as part of a type parameter/argument list
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:21:19
   |
19 |     a2: list[P],
20 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
21 |     a3: Callable[[P], int],
   |                   ^
22 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
23 |     a4: Callable[..., P],
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - or as part of a type parameter/argument list
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:23:23
   |
21 |     a3: Callable[[P], int],
22 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
23 |     a4: Callable[..., P],
   |                       ^
24 |     # TODO: error
25 |     a5: Callable[Concatenate[P, ...], int],
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - or as part of a type parameter/argument list
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:29:25
   |
28 | # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
29 | def invalid_return() -> P:
   |                         ^
30 |     raise NotImplementedError
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - or as part of a type parameter/argument list
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:34:8
   |
32 | def invalid_variable_annotation(y: Any) -> None:
33 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
34 |     x: P = y
   |        ^
35 |
36 | def invalid_with_qualifier(y: Any) -> None:
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - or as part of a type parameter/argument list
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:38:8
   |
36 | def invalid_with_qualifier(y: Any) -> None:
37 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
38 |     x: Final[P] = y
   |        ^^^^^^^^
39 |
40 | # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - or as part of a type parameter/argument list
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:41:37
   |
40 | # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
41 | def invalid_stringified_return() -> "P":
   |                                     ^^^
42 |     raise NotImplementedError
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - or as part of a type parameter/argument list
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:46:8
   |
44 | def invalid_stringified_annotation(
45 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
46 |     a: "P",
   |        ^^^
47 | ) -> None: ...
48 | def invalid_stringified_variable_annotation(y: Any) -> None:
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - or as part of a type parameter/argument list
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:50:8
   |
48 | def invalid_stringified_variable_annotation(y: Any) -> None:
49 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
50 |     x: "P" = y
   |        ^^^
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - or as part of a type parameter/argument list
info: rule `invalid-type-form` is enabled by default

```
